atualizado banco de dados, adicionado paginação

--- a/Views/Processo/2Edit.cshtml
+++ b/Views/Processo/2Edit.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NPU" class="control-label"></label>
-                <input asp-for="NPU" class="form-control" />
-                <span asp-validation-for="NPU" class="text-danger"></span>
+                <label asp-for="Npu" class="control-label"></label>
+                <input asp-for="Npu" class="form-control" />
+                <span asp-validation-for="Npu" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DataDeCadastro" class="control-label"></label>
