--- a/Views/Processo/Criar.cshtml
+++ b/Views/Processo/Criar.cshtml
@@ -18,14 +18,19 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NPU" class="control-label"></label>
-                <input asp-for="NPU" class="form-control" />
-                <span asp-validation-for="NPU" class="text-danger"></span>
+                <label asp-for="Npu" class="control-label"></label>
+                <input asp-for="Npu" class="form-control" />
+                <span asp-validation-for="Npu" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Municipio" class="control-label"></label>
                 <input asp-for="Municipio" class="form-control" />
                 <span asp-validation-for="Municipio" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Uf" class="control-label"></label>
+                <input asp-for="Uf" class="form-control" />
+                <span asp-validation-for="Uf" class="text-danger"></span>
             </div>
             <p></p>
             <div class="form-group">
