--- a/Views/Processo/2Details.cshtml
+++ b/Views/Processo/2Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Nome)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NPU)
+            @Html.DisplayNameFor(model => model.Npu)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NPU)
+            @Html.DisplayFor(model => model.Npu)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataDeCadastro)
