--- a/Views/Processo/Detalhes.cshtml
+++ b/Views/Processo/Detalhes.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Nome)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NPU)
+            @Html.DisplayNameFor(model => model.Npu)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NPU)
+            @Html.DisplayFor(model => model.Npu)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataDeCadastro)
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Editar" asp-route-id="@Model?.Id">Editar</a> |
     <a asp-action="Index">Back to List</a>
 </div>
