--- a/Views/Processo/Editar.cshtml
+++ b/Views/Processo/Editar.cshtml
@@ -1,16 +1,16 @@
 @model fsbr_desafio.Models.Processo
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Processo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Editar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -19,9 +19,9 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NPU" class="control-label"></label>
-                <input asp-for="NPU" class="form-control" />
-                <span asp-validation-for="NPU" class="text-danger"></span>
+                <label asp-for="Npu" class="control-label"></label>
+                <input asp-for="Npu" class="form-control" />
+                <span asp-validation-for="Npu" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Municipio" class="control-label"></label>
