--- a/Views/Processo/Excluir.cshtml
+++ b/Views/Processo/Excluir.cshtml
@@ -1,12 +1,12 @@
 @model fsbr_desafio.Models.Processo
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir";
 }
 
-<h1>Delete</h1>
+<h1>Excluir</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que deseja excluir?</h3>
 <div>
     <h4>Processo</h4>
     <hr />
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.Nome)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NPU)
+            @Html.DisplayNameFor(model => model.Npu)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NPU)
+            @Html.DisplayFor(model => model.Npu)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataDeCadastro)
@@ -41,11 +41,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Municipio)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Uf)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Uf)
+        </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Excluir">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Excluir" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
