--- a/Views/Processo/Detalhes.cshtml
+++ b/Views/Processo/Detalhes.cshtml
@@ -14,6 +14,14 @@
     </dl>
 </div>
 <div>
+    <form asp-action="ConfirmarVisualizacao">
+        <input type="hidden" asp-for="Id" />
+
+        @if(Model.DataDeVisualizacao is null)
+        {
+            <input type="submit" value="Confirmar visualização" class="btn btn-success" />
+        }
+    </form>
     <a asp-action="Editar" asp-route-id="@Model?.Id">Editar</a> |
     <a asp-action="Index">Voltar a listagem</a>
 </div>
