--- a/Views/Processo/Editar.cshtml
+++ b/Views/Processo/Editar.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Editar">
+        <form id="Editar" asp-action="Editar">
             @await Html.PartialAsync("_FormEdicao", Model)
 
             <div class="form-group">
