--- a/Views/Processo/_FormVisualizacao.cshtml
+++ b/Views/Processo/_FormVisualizacao.cshtml
@@ -7,10 +7,10 @@
     @Html.DisplayFor(model => model.Nome)
 </dd>
 <dt class = "col-sm-2">
-    @Html.DisplayNameFor(model => model.Npu)
+    @Html.DisplayNameFor(model => model.NpuFormatado)
 </dt>
 <dd class = "col-sm-10">
-    @Html.DisplayFor(model => model.Npu)
+    @Html.DisplayFor(model => model.NpuFormatado)
 </dd>
 <dt class = "col-sm-2">
     @Html.DisplayNameFor(model => model.DataDeCadastro)
@@ -36,3 +36,4 @@
 <dd class = "col-sm-10">
     @Html.DisplayFor(model => model.Uf)
 </dd>
+<p></p>
